--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -21,40 +21,40 @@ Size=1920,1080
 Collapsed=0
 
 [Window][Game]
-Pos=328,0
-Size=1104,658
+Pos=0,0
+Size=854,539
 Collapsed=0
-DockId=0x0000000F,0
+DockId=0x00000008,0
 
 [Window][Debug]
 Pos=328,0
 Size=1104,658
 Collapsed=0
-DockId=0x0000000F,2
+DockId=0x11111111,2
 
 [Window][Hierarchy]
-Pos=0,0
-Size=326,658
-Collapsed=0
-DockId=0x0000000E,0
-
-[Window][Inspector]
-Pos=1434,0
-Size=486,1080
+Pos=856,0
+Size=335,796
 Collapsed=0
 DockId=0x00000017,0
+
+[Window][Inspector]
+Pos=1193,0
+Size=727,796
+Collapsed=0
+DockId=0x00000018,0
 
 [Window][Engine]
 Pos=0,527
 Size=241,283
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000018,0
 
 [Window][Scene]
-Pos=328,0
-Size=1104,658
+Pos=0,541
+Size=854,539
 Collapsed=0
-DockId=0x0000000F,1
+DockId=0x00000009,0
 
 [Window][Project]
 Pos=605,544
@@ -114,10 +114,10 @@ Size=270,283
 Collapsed=0
 
 [Window][Console]
-Pos=0,660
-Size=327,420
+Pos=856,798
+Size=1064,282
 Collapsed=0
-DockId=0x00000010,0
+DockId=0x0000000F,1
 
 [Window][Rendering]
 Pos=1107,158
@@ -133,7 +133,7 @@ Collapsed=0
 Pos=328,0
 Size=1104,658
 Collapsed=0
-DockId=0x0000000F,2
+DockId=0x11111111,2
 
 [Window][Dear ImGui Debug Log]
 Pos=109,87
@@ -156,7 +156,7 @@ DockId=0x00000015,0
 Pos=328,0
 Size=1104,658
 Collapsed=0
-DockId=0x0000000F,3
+DockId=0x11111111,3
 
 [Window][Dear ImGui Demo/ResizableChild_478B81A3]
 IsChild=1
@@ -220,15 +220,15 @@ Size=196,76
 Collapsed=0
 
 [Window][EditLayout]
-Pos=952,483
+Pos=891,584
 Size=471,166
 Collapsed=0
 
 [Window][Asset]
-Pos=329,660
-Size=1103,420
+Pos=856,798
+Size=1064,282
 Collapsed=0
-DockId=0x00000018,0
+DockId=0x0000000F,0
 
 [Window][AssetEditor Layout]
 Pos=1125,318
@@ -241,9 +241,19 @@ Size=508,230
 Collapsed=1
 
 [Window][Receiver]
-Pos=1434,656
+Pos=621,880
 Size=194,212
 Collapsed=0
+
+[Window][ParticleEmitterHandler_EditLayout]
+Pos=232,38
+Size=608,475
+Collapsed=1
+
+[Window][ParticleEmitter_EditLayout]
+Pos=233,67
+Size=607,475
+Collapsed=1
 
 [Table][0x51D6F5EA,3]
 Column 0  Weight=1.0000
@@ -326,22 +336,22 @@ DockNode              ID=0x00000001 Pos=946,306 Size=551,268 Split=X Selected=0x
   DockNode            ID=0x00000003 Parent=0x00000001 SizeRef=177,219 Selected=0x44A6A033
 DockNode              ID=0x00000016 Pos=227,132 Size=668,189 Selected=0x475E4117
 DockSpace             ID=0x11111111 Window=0x1BBC0F80 Pos=0,0 Size=1920,1080 Split=X
-  DockNode            ID=0x00000011 Parent=0x11111111 SizeRef=1432,1080 Split=Y
-    DockNode          ID=0x00000008 Parent=0x00000011 SizeRef=1920,658 Split=X Selected=0xD1EB2482
-      DockNode        ID=0x0000000E Parent=0x00000008 SizeRef=326,633 Selected=0xBABDAE5E
-      DockNode        ID=0x0000000F Parent=0x00000008 SizeRef=1104,633 Selected=0xD1EB2482
-    DockNode          ID=0x00000009 Parent=0x00000011 SizeRef=1920,420 Split=X
-      DockNode        ID=0x0000000C Parent=0x00000009 SizeRef=882,810 Split=X
-        DockNode      ID=0x00000004 Parent=0x0000000C SizeRef=880,810 Split=Y
-          DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=1920,39 Selected=0x9EBFE3AB
-          DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=1920,1039 Split=X
-            DockNode  ID=0x00000010 Parent=0x00000006 SizeRef=327,438 Selected=0xEA83D666
-            DockNode  ID=0x00000018 Parent=0x00000006 SizeRef=1103,438 CentralNode=1 Selected=0xF0D94A78
-        DockNode      ID=0x00000007 Parent=0x0000000C SizeRef=558,810 Split=Y Selected=0xE7039252
-          DockNode    ID=0x00000012 Parent=0x00000007 SizeRef=652,85 Selected=0x93DAEA18
-          DockNode    ID=0x00000013 Parent=0x00000007 SizeRef=652,566 Selected=0x7DDCD467
-      DockNode        ID=0x0000000D Parent=0x00000009 SizeRef=556,810 Split=Y Selected=0x29EABFBD
-        DockNode      ID=0x00000014 Parent=0x0000000D SizeRef=171,233 Selected=0xBABDAE5E
-        DockNode      ID=0x00000015 Parent=0x0000000D SizeRef=171,575 Selected=0x031DC75C
-  DockNode            ID=0x00000017 Parent=0x11111111 SizeRef=486,1080 Selected=0x36DC96AB
+  DockNode            ID=0x0000000C Parent=0x11111111 SizeRef=882,810 Split=X
+    DockNode          ID=0x00000004 Parent=0x0000000C SizeRef=880,810 Split=Y
+      DockNode        ID=0x00000005 Parent=0x00000004 SizeRef=1920,39 Selected=0x9EBFE3AB
+      DockNode        ID=0x00000006 Parent=0x00000004 SizeRef=1920,1039 Split=X Selected=0xF0D94A78
+        DockNode      ID=0x0000000A Parent=0x00000006 SizeRef=854,490 Split=Y Selected=0xE601B12F
+          DockNode    ID=0x00000008 Parent=0x0000000A SizeRef=994,539 Selected=0xD1EB2482
+          DockNode    ID=0x00000009 Parent=0x0000000A SizeRef=994,539 Selected=0xE601B12F
+        DockNode      ID=0x0000000B Parent=0x00000006 SizeRef=1064,490 Split=Y Selected=0x36DC96AB
+          DockNode    ID=0x0000000E Parent=0x0000000B SizeRef=1064,796 Split=X Selected=0x36DC96AB
+            DockNode  ID=0x00000017 Parent=0x0000000E SizeRef=335,769 Selected=0xBABDAE5E
+            DockNode  ID=0x00000018 Parent=0x0000000E SizeRef=727,769 CentralNode=1 Selected=0x36DC96AB
+          DockNode    ID=0x0000000F Parent=0x0000000B SizeRef=1064,282 Selected=0xF0D94A78
+    DockNode          ID=0x00000007 Parent=0x0000000C SizeRef=558,810 Split=Y Selected=0xE7039252
+      DockNode        ID=0x00000012 Parent=0x00000007 SizeRef=652,85 Selected=0x93DAEA18
+      DockNode        ID=0x00000013 Parent=0x00000007 SizeRef=652,566 Selected=0x7DDCD467
+  DockNode            ID=0x0000000D Parent=0x11111111 SizeRef=556,810 Split=Y Selected=0x29EABFBD
+    DockNode          ID=0x00000014 Parent=0x0000000D SizeRef=171,233 Selected=0xBABDAE5E
+    DockNode          ID=0x00000015 Parent=0x0000000D SizeRef=171,575 Selected=0x031DC75C
 
