--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -22,7 +22,7 @@ Collapsed=0
 
 [Window][Game]
 Pos=0,0
-Size=854,539
+Size=854,538
 Collapsed=0
 DockId=0x00000008,0
 
@@ -51,8 +51,8 @@ Collapsed=0
 DockId=0x00000018,0
 
 [Window][Scene]
-Pos=0,541
-Size=854,539
+Pos=0,540
+Size=854,540
 Collapsed=0
 DockId=0x00000009,0
 
@@ -115,9 +115,9 @@ Collapsed=0
 
 [Window][Console]
 Pos=856,773
-Size=1064,307
+Size=336,307
 Collapsed=0
-DockId=0x0000000F,1
+DockId=0x00000010,0
 
 [Window][Rendering]
 Pos=1107,158
@@ -225,10 +225,10 @@ Size=471,166
 Collapsed=0
 
 [Window][Asset]
-Pos=856,773
-Size=1064,307
+Pos=1194,773
+Size=726,307
 Collapsed=0
-DockId=0x0000000F,0
+DockId=0x00000011,0
 
 [Window][AssetEditor Layout]
 Pos=1125,318
@@ -341,13 +341,15 @@ DockSpace             ID=0x11111111 Window=0x1BBC0F80 Pos=0,0 Size=1920,1080 Spl
       DockNode        ID=0x00000005 Parent=0x00000004 SizeRef=1920,39 Selected=0x9EBFE3AB
       DockNode        ID=0x00000006 Parent=0x00000004 SizeRef=1920,1039 Split=X Selected=0xF0D94A78
         DockNode      ID=0x0000000A Parent=0x00000006 SizeRef=854,490 Split=Y Selected=0xE601B12F
-          DockNode    ID=0x00000008 Parent=0x0000000A SizeRef=994,539 Selected=0xD1EB2482
-          DockNode    ID=0x00000009 Parent=0x0000000A SizeRef=994,539 Selected=0xE601B12F
+          DockNode    ID=0x00000008 Parent=0x0000000A SizeRef=994,538 Selected=0xD1EB2482
+          DockNode    ID=0x00000009 Parent=0x0000000A SizeRef=994,540 Selected=0xE601B12F
         DockNode      ID=0x0000000B Parent=0x00000006 SizeRef=1064,490 Split=Y Selected=0x36DC96AB
           DockNode    ID=0x0000000E Parent=0x0000000B SizeRef=1064,771 Split=X Selected=0x36DC96AB
             DockNode  ID=0x00000017 Parent=0x0000000E SizeRef=335,769 Selected=0xBABDAE5E
             DockNode  ID=0x00000018 Parent=0x0000000E SizeRef=727,769 CentralNode=1 Selected=0x36DC96AB
-          DockNode    ID=0x0000000F Parent=0x0000000B SizeRef=1064,307 Selected=0xF0D94A78
+          DockNode    ID=0x0000000F Parent=0x0000000B SizeRef=1064,307 Split=X Selected=0xF0D94A78
+            DockNode  ID=0x00000010 Parent=0x0000000F SizeRef=336,307 Selected=0xEA83D666
+            DockNode  ID=0x00000011 Parent=0x0000000F SizeRef=726,307 Selected=0xF0D94A78
     DockNode          ID=0x00000007 Parent=0x0000000C SizeRef=558,810 Split=Y Selected=0xE7039252
       DockNode        ID=0x00000012 Parent=0x00000007 SizeRef=652,85 Selected=0x93DAEA18
       DockNode        ID=0x00000013 Parent=0x00000007 SizeRef=652,566 Selected=0x7DDCD467
