spriteが出ました

--- a/Project/Assets/Engine/ShaderData/VS_PS/Object/ApplyPostProcessObject2D.json
+++ b/Project/Assets/Engine/ShaderData/VS_PS/Object/ApplyPostProcessObject2D.json
@@ -17,7 +17,8 @@
     ],
     "InputLayout":[
         {"Desc":0, "SemanticName": "POSITION", "Format": "R32G32_FLOAT"},
-        {"Desc":1, "SemanticName": "TEXCOORD", "Format": "R32G32_FLOAT"}
+        {"Desc":1, "SemanticName": "TEXCOORD", "Format": "R32G32_FLOAT"},
+        {"Desc":2, "SemanticName": "COLOR", "Format": "R32G32B32A32_FLOAT"}
     ],
     "Rasterizer":[
         {
