--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -503,6 +503,15 @@
     <ClCompile Include="Engine\Core\ECS\System\Systems\SpriteBufferSystem.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\Entity\Interface\IGameEntity.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Entity\GameEntity2D.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Entity\GameEntity3D.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -690,6 +699,9 @@
     <ClInclude Include="Engine\Particle\ParticleUpdater.h" />
     <ClInclude Include="Engine\Particle\Updater\ParticleUpdater.h" />
     <ClInclude Include="Engine\Core\ECS\System\Systems\SpriteBufferSystem.h" />
+    <ClInclude Include="Engine\Entity\Interface\IGameEntity.h" />
+    <ClInclude Include="Engine\Entity\GameEntity3D.h" />
+    <ClInclude Include="Engine\Entity\GameEntity2D.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\MS\Triangle.MS.hlsl" />
