--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -270,6 +270,12 @@ Pos=239,61
 Size=586,144
 Collapsed=0
 
+[Window][Shadow]
+Pos=0,0
+Size=854,529
+Collapsed=0
+DockId=0x00000008,1
+
 [Table][0x51D6F5EA,3]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
