--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -738,8 +738,9 @@
     <FxCompile Include="Assets\Engine\Shaders\DXR\ShadowRay.hlsl" />
     <FxCompile Include="Assets\Engine\Shaders\CS\Object\Skinning.CS.hlsl" />
     <FxCompile Include="Assets\Engine\Shaders\DXR\ShadowRay_RayGeneration.hlsl" />
-    <FxCompile Include="Assets\Engine\Shaders\DXR\ShadowRay_Miss.hlsl" />
+    <FxCompile Include="Assets\Engine\Shaders\DXR\ShadowRay_AnyHit.hlsl" />
     <FxCompile Include="Assets\Engine\Shaders\DXR\ShadowRay_ClosestHit.hlsl" />
+    <FxCompile Include="Assets\Engine\Shaders\DXR\ShadowRay_Miss.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Engine\Shaders\MS\Triangle.hlsli" />
